[workspace]
resolver = "2"
members = [
    "game/main",
	"game/buildings",
	"game/shared",
    "engine/world_generation",
	"engine/asset_loader", "game/buildings", "game/shared"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
