[workspace]
resolver = "2"
members = [
    "game/main",
	"game/shared",
	"game/buildings",
	"game/units",
	"game/resources",
    "engine/world_generation",
	"engine/asset_loader",
	"engine/data",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
