[package]
name = "world_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.18.0"
noise = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
asset_loader = { path = "../asset_loader" }
rayon = "1.11.0"
bevy-inspector-egui = "0.36.0"
bevy_asset_loader = { version = "0.26.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
ron = "0.12.0"
image = "0.25.9"
num = "0.4.3"
hex = { path = "../hex" }

[features]
tracing = ["bevy/trace_tracy"]
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# That's dumb
needless_return = "allow"
