[package]
name = "buildings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.18.0"
world_generation = { path = "../../engine/world_generation" }
shared = { path = "../shared" }
bevy_rapier3d = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
asset_loader = { path = "../../engine/asset_loader" }
serde_json = "1.0.149"
ron = "0.12.0"
bevy_asset_loader = { version = "0.25.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
hex = { path = "../../engine/hex" }

[features]
tracing = []
