[package]
name = "buildings"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.19.0"
world_generation = { path = "../../engine/world_generation" }
shared = { path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
asset_loader = { path = "../../engine/asset_loader" }
serde_json = "1.0.150"
ron = "0.12.2"
bevy_asset_loader = { version = "0.27.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
hex = { path = "../../engine/hex" }

[features]
tracing = []
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# That's dumb
needless_return = "allow"
