[package]
name = "phos"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18.0", features = ["file_watcher"] }
bevy-inspector-egui = "0.36.0"
# iyes_perf_ui = "0.3.0"
noise = "0.9.0"
world_generation = { path = "../../engine/world_generation" }
bevy_rapier3d = { version = "0.33.0", features = [
	"simd-stable",
	"parallel",
	"debug-render-3d",
] }
rayon = "1.11.0"
buildings = { path = "../buildings" }
units = { path = "../units" }
shared = { path = "../shared" }
bevy_asset_loader = { version = "0.25.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
ron = "0.12.0"
image = "0.25.9"
hex = { path = "../../engine/hex" }

# bevy_lunex = "0.2.4"

[features]
tracing = [
	"bevy/trace_tracy",
	"world_generation/tracing",
	"buildings/tracing",
	"units/tracing",
	"shared/tracing",
]
