[package]
name = "phos"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18.1" }
bevy-inspector-egui = "0.36.0"
# iyes_perf_ui = "0.3.0"
noise = "0.9.0"
world_generation = { path = "../../engine/world_generation" }
bevy_rapier3d = { version = "0.34.0", features = [
	"simd-stable",
	"parallel",
] }
rayon = "1.11.0"
buildings = { path = "../buildings" }
units = { path = "../units" }
shared = { path = "../shared" }
bevy_asset_loader = { version = "0.25.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
ron = "0.12.0"
image = "0.25.9"
hex = { path = "../../engine/hex" }
strum = "0.28.0"
strum_macros = "0.28.0"

# bevy_lunex = "0.2.4"

[features]
default = ["dev"]
editor = []
tracing = [
	"bevy/trace_tracy",
	"world_generation/tracing",
	"buildings/tracing",
	"units/tracing",
	"shared/tracing",
]
dev = [
	"bevy/bevy_dev_tools",
	"bevy/bevy_ui_debug",
	# Improve error messages coming from Bevy
	"bevy/track_location",
	"inspect",
	"bevy/file_watcher",
	"bevy/embedded_watcher",
]
phys = ["dev", "bevy_rapier3d/debug-render-3d"]
inspect = ["dev"]

[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# That's dumb
needless_return = "allow"

[package.metadata.bevy_cli.release]
# Disable dev features for release builds.
default-features = false
