[package]
name = "resources"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
world_generation = { path = "../../engine/world_generation" }
shared = { path = "../shared" }
serde = { version = "1.0.204", features = ["derive"] }
asset_loader = { path = "../../engine/asset_loader" }
serde_json = "1.0.120"
ron = "0.8.1"
bevy_asset_loader = { version = "0.21.0", features = [
	"standard_dynamic_assets",
	"3d",
] }

[features]
tracing = []
