[package]
name = "resources"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.0"
world_generation = { path = "../../engine/world_generation" }
shared = { path = "../shared" }
serde = { version = "1.0.228", features = ["derive"] }
asset_loader = { path = "../../engine/asset_loader" }
serde_json = "1.0.149"
ron = "0.12.0"
bevy_asset_loader = { version = "0.26.0", features = [
	"standard_dynamic_assets",
	"3d",
] }

[features]
tracing = []
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments, which would undesirably trigger this lint.
too_many_arguments = "allow"
# Queries may access many components, which would undesirably trigger this lint.
type_complexity = "allow"
# Make sure macros use their standard braces, such as `[]` for `bevy_ecs::children!`.
nonstandard_macro_braces = "warn"
# That's dumb
needless_return = "allow"
