[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.14.2"
serde = { version = "1.0.204", features = ["derive"] }
world_generation = { path = "../../engine/world_generation" }


[features]
tracing = []
