[package]
name = "units"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
world_generation = { path = "../../engine/world_generation" }
shared = { path = "../shared" }
bevy_rapier3d = "0.27.0"
serde = { version = "1.0.204", features = ["derive"] }
asset_loader = { path = "../../engine/asset_loader" }
serde_json = "1.0.120"
ron = "0.8.1"
bevy_asset_loader = { version = "0.21.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
quadtree_rs = "0.1.3"
pathfinding = "4.11.0"
ordered-float = "4.3.0"

[features]
tracing = ["bevy/trace_tracy"]
