[package]
name = "units"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.18.0"
world_generation = { path = "../../engine/world_generation" }
hex = { path = "../../engine/hex" }
shared = { path = "../shared" }
bevy_rapier3d = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
asset_loader = { path = "../../engine/asset_loader" }
serde_json = "1.0.149"
ron = "0.12.0"
bevy_asset_loader = { version = "0.25.0", features = [
	"standard_dynamic_assets",
	"3d",
] }
quadtree_rs = "0.1.3"
pathfinding = "4.14.0"
ordered-float = "5.1.0"

[features]
tracing = ["bevy/trace_tracy"]
